# the-unconsoled

./: BA.cpp  BA.hpp  CMakeLists.txt  LTL.cpp  LTL.hpp  PowerSet.hpp  README.md  TS.cpp  TS.hpp  Tools.cpp  Tools.hpp
src/: PowerSet.hpp  Tools.hpp  main.cpp
src/BA/: BA.cpp  BA.hpp
src/LTL/: LTL.cpp  LTL.hpp
src/Parser/: LTLEvalVisitor.cpp  LTLEvalVisitor.hpp  LTLlang.g4
src/TS/: TS.cpp  TS.hpp
test_data/: input0.txt  input1.txt
